--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
 :root {
   --primary: #cc0000;
   --primary-text: #000000;
@@ -6,4 +8,177 @@
   --button-border: #cccccc;
   --bg-color: #f9f9f9;
   --bg-secondary: #ffffff;
+
+  --font-family: "Roboto", sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: var(--font-family);
+}
+
+body {
+  width: 100%;
+  min-height: 100vh;
+  background: var(--bg-color);
+  overflow-x: hidden;
+}
+
+/* Header */
+
+.menu {
+  display: flex;
+  padding: 1rem;
+  justify-content: space-between;
+  background: var(--bg-secondary);
+}
+
+.menu__logo-section {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
+
+.menu__search-container {
+  display: flex;
+
+  .search-input {
+    display: none;
+  }
+
+  .search-button {
+    background: transparent;
+    border: none;
+  }
+}
+
+.menu__profile-container {
+  display: flex;
+  align-items: center;
+  column-gap: 0.7rem;
+}
+
+/* Main */
+
+main {
+  padding: 1rem;
+}
+
+/* Main video */
+
+.main-video {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+  font-size: 0.9rem;
+
+  h1 {
+    font-size: 1.25rem;
+  }
+}
+
+.main__video__options {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+}
+
+.video__profile {
+  display: flex;
+  column-gap: 1rem;
+  align-items: center;
+
+  h2,
+  p {
+    font-size: 0.9rem;
+  }
+
+  img {
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .profile__detail p {
+    color: var(--secondary-text);
+  }
+
+  .button-subscribe {
+    background: var(--primary);
+    padding: 0.5rem 1.5rem;
+    border: none;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: #ffffff;
+  }
+}
+
+.video__buttons-interaction {
+  display: flex;
+  justify-content: space-between;
+
+  button {
+    display: flex;
+    align-items: center;
+    column-gap: 0.3rem;
+    font-weight: 500;
+    border: none;
+    background: transparent;
+  }
+
+  button:nth-child(2) {
+    img {
+      transform: rotate(180deg);
+    }
+  }
+}
+
+.main__video__text-infos {
+  display: flex;
+  flex-direction: column;
+  font-weight: 500;
+}
+
+.main__video__description {
+  color: var(--secondary-text);
+}
+
+/* Aside */
+aside {
+  margin-top: 3rem;
+}
+
+.aside-video__container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5rem;
+  margin-top: 2rem;
+
+  .aside-video__container__texts {
+    display: flex;
+    flex-direction: column;
+    font-size: 0.75rem;
+
+    h2 {
+      font-size: 0.9rem;
+    }
+
+    a {
+      text-decoration: none;
+      color: var(--secondary-text);
+    }
+
+    .details {
+      display: flex;
+      justify-content: space-between;
+      color: var(--secondary-text);
+    }
+  }
+}
+
+footer {
+  width: 100%;
+  text-align: center;
+  padding: 1rem;
 }
