--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -51,6 +51,10 @@ body {
   .search-button {
     background: transparent;
     border: none;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
 
@@ -58,13 +62,13 @@ body {
   display: flex;
   align-items: center;
   column-gap: 0.7rem;
+
+  button:hover {
+    cursor: pointer;
+  }
 }
 
 /* Main */
-
-main {
-  padding: 1rem;
-}
 
 /* Main video */
 
@@ -73,10 +77,29 @@ main {
   flex-direction: column;
   row-gap: 1.5rem;
   font-size: 0.9rem;
+  padding: 1rem;
 
   h1 {
     font-size: 1.25rem;
   }
+}
+
+.video-wrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+}
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.video-wrapper:has(.iframe-desktop) {
+  display: none;
 }
 
 .main__video__options {
@@ -111,6 +134,12 @@ main {
     text-transform: uppercase;
     font-weight: 600;
     color: #ffffff;
+    transition: 0.3s;
+
+    &:hover {
+      cursor: pointer;
+      filter: brightness(85%);
+    }
   }
 }
 
@@ -125,6 +154,10 @@ main {
     font-weight: 500;
     border: none;
     background: transparent;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   button:nth-child(2) {
@@ -146,7 +179,7 @@ main {
 
 /* Aside */
 aside {
-  margin-top: 3rem;
+  padding: 1rem;
 }
 
 .aside-video__container {
@@ -181,4 +214,37 @@ footer {
   width: 100%;
   text-align: center;
   padding: 1rem;
+}
+
+@media screen and (min-width: 600px) {
+  .menu__search-container {
+    display: flex;
+
+    .search-input {
+      padding: 0 1rem;
+      display: block;
+      border: 1px solid var(--button-border);
+    }
+
+    .search-button {
+      margin-left: -1px;
+      padding: 0 0.5rem;
+      border: 1px solid var(--button-border);
+    }
+  }
+
+  .button-subscribe {
+    margin-left: 2rem;
+  }
+
+  .main__video__text-infos {
+    flex-direction: row;
+    column-gap: 2rem;
+  }
+
+  aside {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1rem;
+  }
 }
