--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -468,3 +468,13 @@ footer {
     padding: 0.3rem 0;
   }
 }
+
+@media screen and (min-width: 1500px) {
+  .main-video {
+    flex: 3;
+  }
+
+  aside {
+    flex: 1;
+  }
+}
